// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Customer Cloud Subscription modal; should render for AWS 1`] = `
<Modal
  onClose={[MockFunction]}
  onPrimaryClick={[MockFunction]}
  primaryText="Close"
  showSecondary={false}
  title="Customer cloud subscription"
>
  <TextContent>
    With this subscription option, the cluster will be provisioned in an AWS account owned by you or your company. This allows you to pay AWS directly for public cloud costs, leveraging your existing relationship.
  </TextContent>
  <Title
    className="pf-u-mt-sm"
    headingLevel="h3"
    size="lg"
  >
    Important
  </Title>
  <TextContent>
    In order for the cluster provisioning to succeed, you must ensure the following:
  </TextContent>
  <TextContent>
    <List>
      <ListItem>
        Your AWS account has the necessary limits to support the desired cluster size.
         
        <ExternalLink
          href="https://docs.openshift.com/dedicated/osd_planning/aws-ccs.html#aws-limits_aws-ccs"
          noIcon={true}
        >
          See resource requirements.
        </ExternalLink>
         
      </ListItem>
      <ListItem>
        An IAM user called “osdCcsAdmin” exists with the AdministratorAccess policy.
      </ListItem>
      <ListItem>
        An Organization Service Control Policy (SCP) is set up according to the
         
        <ExternalLink
          href="https://docs.openshift.com/dedicated/osd_planning/aws-ccs.html#ccs-aws-scp_aws-ccs"
          noIcon={true}
        >
          documentation
        </ExternalLink>
        .
      </ListItem>
    </List>
  </TextContent>
  <TextContent>
    It is also recommended that you have at least Business Support from AWS. Refer to the
     
    <ExternalLink
      href="https://docs.openshift.com/dedicated/osd_planning/aws-ccs.html"
      noIcon={true}
    >
      documentation
    </ExternalLink>
     
    for more detail around the requirements for customer cloud subscription.
  </TextContent>
</Modal>
`;

exports[`Customer Cloud Subscription modal; should render for GCP 1`] = `
<Modal
  onClose={[MockFunction]}
  onPrimaryClick={[MockFunction]}
  primaryText="Close"
  showSecondary={false}
  title="Customer cloud subscription"
>
  <TextContent>
    With this subscription option, the cluster will be provisioned in a Google Cloud account owned by you or your company. This allows you to pay Google Cloud directly for public cloud costs, leveraging your existing relationship.
  </TextContent>
  <Title
    className="pf-u-mt-sm"
    headingLevel="h3"
    size="lg"
  >
    Important
  </Title>
  <TextContent>
    In order for the cluster provisioning to succeed, you must ensure the following:
  </TextContent>
  <TextContent>
    <List>
      <ListItem>
        Your Google Cloud account has the necessary resource quotas and limits to support the desired cluster size.
         
        <ExternalLink
          href="https://docs.openshift.com/dedicated/osd_planning/gcp-ccs.html#gcp-limits_gcp-ccs"
        >
          See resource requirements.
        </ExternalLink>
         
      </ListItem>
      <ListItem>
        An IAM service account called “osd-ccs-admin” exists with the following roles attached:
        <List
          className="pf-u-pb-xs"
        >
          <ListItem>
            DNS Administrator
          </ListItem>
          <ListItem>
            Organization Policy Viewer
          </ListItem>
          <ListItem>
            Owner
          </ListItem>
          <ListItem>
            Project IAM Admin
          </ListItem>
          <ListItem>
            Service Management Administrator
          </ListItem>
          <ListItem>
            Service Usage Admin
          </ListItem>
          <ListItem>
            Storage Admin
          </ListItem>
        </List>
      </ListItem>
    </List>
  </TextContent>
  <TextContent>
    It is also recommended that you have at least Production support from GCP. To prevent potential conflicts, we also recommend that you have no other resources provisioned in the project prior to provisioning OpenShift Dedicated. Refer to
     
    <ExternalLink
      href="https://docs.openshift.com/dedicated/osd_planning/gcp-ccs.html"
      noIcon={true}
    >
      the documentation
    </ExternalLink>
     
    for more detail around the requirements for customer cloud subscription.
  </TextContent>
</Modal>
`;
